Creadas entidades de categorias y productos y agregados conexions string para SQL server local.

--- a/ServMarkService/appsettings.json
+++ b/ServMarkService/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+      "CsSerMark": "Data Source=localhost;Initial Catalog=ServMarkDotNetDb;User ID=sa;Password=biosh0KEd;TrustServerCertificate=True"
+  }
 }
