--- a/ServMarkService/appsettings.Development.json
+++ b/ServMarkService/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "CsSerMark": "Data Source=localhost;Initial Catalog=ServMarkDotNetDb;User ID=sa;Password=biosh0KEd;TrustServerCertificate=True"
   }
 }
